--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit==0.83.0
-numpy>=1.21.0
-pandas==1.2.4
-matplotlib==3.4.2
-seaborn==0.11.1
-scikit-learn==0.24.2
+numpy==1.21.0
+pandas==1.3.0
 protobuf==3.20.3
+scipy==1.7.0
 
 
